services/wiki-svc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-svc
  namespace: microservices
  labels:
    app: wiki-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki-svc
  template:
    metadata:
      labels:
        app: wiki-svc
      annotations:
        rollme: "2"
    spec:
      containers:
      - name: wiki-svc
        image: ghcr.io/vimalmenon/micro-army/wiki-svc:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
