services/wiki-svc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-svc
  namespace: microservices
  labels:
    app: wiki-svc
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: wiki-svc
